# cmake

ex-1/: CMakeLists.txt  main.cpp
ex-10/my_static_lib/include/: CMakeLists.txt
ex-10/my_static_lib/include/my_static_lib/: my_static_lib.h
ex-10/my_static_lib/include/src/: my_static_lib.cpp
ex-10/my_static_lib/my_project/: CMakeLists.txt  main.cpp
ex-2/: CMakeLists.txt
ex-3/my_project/: CMakeLists.txt  main.cpp
ex-3/my_project/utils/: CMakeLists.txt  utility.cpp  utility.h
ex-3/new/my_project/: CMakeLists.txt  main.cpp
ex-3/new/my_project/subdir1/: CMakeLists.txt  source1.h
ex-3/new/my_project/subdir2/: CMakeLists.txt  source2.h
ex-4/my_project/: CMakeLists.txt  main.cpp
ex-4/my_project/includes/: math_functions.h
ex-4/my_project/math/: add.cpp  subtract.cpp
ex-5/MyApp/: CMakeLists.txt  main.cpp
ex-5/MyApp/ExternalLib/: CMakeLists.txt  ExternalLibConfig.cmake  ExternalLibTargets.cmake
ex-6/: CMakeLists.txt
ex-7/MyProject/: CMakeLists.txt  main.cpp
ex-8/MyApp/: CMakeLists.txt  config.h.in
ex-9/MyApp/: CMakeLists.txt  main.cpp
ex-9/MyApp/MathLib/: CMakeLists.txt
